# smart-npcs-poc

./: .gitignore  Dockerfile  README.md
.github/workflows/: docker-build.yml  game-ci.yml  server-build.yml
API/: README.md  poetry.toml  pyproject.toml  structure_schema.excalidraw
API/src/api/: api.py
API/src/embed/: hugging_face.py
API/src/llm/: base.py  base_prompt.py  model.py
API/src/rag/: README.md
API/src/sample_codes/embed/: embedder.py  multi_embedder.py  tfidf.py
API/src/sample_codes/vectore_store/: _qdrant.py
Brechi/: README.md  base.py  pyproject.toml
Brechi/src/api/: api.py
Brechi/src/llm/: __init__.py  base.py  base_prompt.py  response.py
Brechi/src/vectore_store/: vectore_store.py
Common/: context_schema.json  example_context.json
Game/: Dockerfile  README.md  SNP.uproject
Game/Binaries/Win64/: SNPEditor.target  UnrealEditor.modules
Game/Config/: DefaultEngine.ini  DefaultGame.ini
Game/Content/DynamicLevels/: LSNP_CaravanInterior.umap
Game/Content/SNP/: crosshair.uasset
Game/Source/: SNP.Target.cs  SNPEditor.Target.cs
Game/Source/SNP/: SNP.Build.cs  SNP.cpp
Game/game-api/: go.mod  go.sum  main.go
Game/game-api/database/: db.go  game.db
Game/game-api/handlers/: inventory_handler.go  players_handler.go
Game/game-api/models/: models.go
Game/multiplayer-project/Assets/: DefaultNetworkPrefabs.asset
Game/multiplayer-project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Milhouzer/: README.md
Milhouzer/multiplayer-project/Assets/: DefaultNetworkPrefabs 1.asset
(+443 files in other folders)
